--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
     image: mysql:latest
     environment:
       MYSQL_DATABASE: Bleed
-      MYSQL_ROOT_PASSWORD: root
+      MYSQL_ROOT_PASSWORD: Bleeddb2024*
     ports:
       - "3306:3306"
     volumes:
